# rust_fwf_polars_example

./: .gitignore  Cargo.toml  README.md
assets/: expr-cols.xlsx
src/: main.rs
