[package]
name = "rust_fwf_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.41.2", features = ["describe", "lazy", "strings", "concat_str", "regex", "performant"]}
regex = "1.10.2"
itertools = "0.12.0"

